# archsight-solver

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  AI_CODING_RULES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  NOTICE.md  README.md  TRADEMARKS.md  app.py  commit_msg.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
backend/: config.py  integration_api.py  integration_errors.py  project_documents.py  project_file_manifest.py  project_workflow.py  template_registry.py
config/: defaults.json
deploy/: .env.example  deploy.sh  docker-compose.yml.example  readme.md
docs/: README.md  agent-engineering-workflow.md  agent-integration.md  aios-runtime-integration.md  api-contracts.md  api-reference.md  architecture-maintenance-status.md  asms-json-schema.md  capabilities.md  deployment.md  global-open-source-i18n-plan.md  host-client.md  host-protocol-1.md  mcp-resources.md  open-source-structure-solver-roadmap.md  project-positioning-summary.md  quickstart.md  roadmap.md  source-layout.md  structural-model-protocol.md  temperature-action-evaluation.md  text-model-spec.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: build-image.ps1  check_release_gate.py  check_versions.py  generate_benchmark_report.py  generate_contract_types.py  kill-ports.ps1  remote-deploy.ps1  run_host_iframe_demo.py
shared/: analysis-assumptions.json  asms-contract-fields.json  materials.json  report-figures.json  report-options.json  result-metrics.json  supports.json
(+510 files in other folders)
