[project]
name = "archsight-solver"
version = "1.0.0"
description = "Open structural mechanics workbench for beams, plane frames, and plane trusses."
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.0",
    "gunicorn>=25.3.0",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
]

[project.scripts]
archsight-solver-beam-deflection = "backend.capabilities.beam_deflection:main"
archsight-solver-tool = "backend.capabilities.solver_cli:main"
archsight-solver-mcp = "backend.capabilities.mcp_server:main"

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]
